# Trello-Tasks

./: .gitignore  Dockerfile  LICENSE  MRO.py  README.md  ThreadPoolExecutor.py  async_on_generator.py  bookings_controller.py  data.txt  docker-compose.yaml  main.py  notes.py  pyproject.toml
BPTree/: Tree.py
Decorator/: Calculator.py  log.txt
IteratorVSIterable/: PrimeNumbers.py  PrimeNumbersIterable.py  PrimeNumbersIterator.py
MRO/: Main.py
MagicAndAttr/: Main.py
app/: Dockerfile
